Fix overlapping layout and responsive issues

--- a/sec6.css
+++ b/sec6.css
@@ -72,7 +72,7 @@
     span{
         font-size: 20px;
         font-weight: 600;
-        margin-top:250px;
+        margin-top:50px;
         margin-bottom:50px;
     }
     h1{
@@ -82,8 +82,8 @@
         margin-bottom:50px;
     }
     .sec-7-1{
-        margin-top: 100px;
-        margin-bottom: 100px;
+        margin-top: 10px;
+        margin-bottom: 10px;
 
     }
     .social-icons a {
